[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.21",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "qmflows"
dynamic = [
    "version",
    "readme",
]
description = "Automation of computations in quantum chemistry."
license = { file = "LICENSE.md" }
authors = [
    { name = "Felipe Zapata", email = "f.zapata@esciencecenter.nl" },
]
keywords = [
    "chemistry",
    "workflows",
    "simulation",
    "materials",
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "more-itertools",
    "h5py",
    "numpy>=1.21",
    "pandas",
    "noodles>=0.3.3",
    "plams==1.5.1",
    "pyparsing!=3.0.0,<3.1.0",
    "pyyaml>=5.1",
    "filelock",
    "packaging>=1.16.8",
]

[project.urls]
Homepage = "https://github.com/SCM-NV/qmflows"
"Bug Tracker" = "https://github.com/SCM-NV/qmflows/issues"
Documentation = "https://qmflows.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = [
    "sphinx>=2.1,!=3.1.1,<7",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "nbsphinx",
    "jupyter",
    "pandoc",
]
lint = [
    "flake8",
    "pydocstyle[toml]>=6.1",
    "Flake8-pyproject>=1.2.2",
    "mypy",
    "types-PyYAML",
    "types-setuptools",
    "pytest>=6.0",
]
test = [
    "qmflows[test-no-optional]",
    "rdkit>=2018.03.1",
]
test-no-optional = [
    "assertionlib>=3.1.0",
    "pytest>=6.0",
    "pytest-cov",
    "pytest-mock",
    "typing_extensions",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["qmflows*"]

[tool.setuptools.package-data]
FOX = [
    "data/dictionaries/*yaml",
    "py.typed",
]

[tool.setuptools.dynamic]
readme = { file = ["README.rst"], content-type = "text/x-rst" }

[tool.setuptools_scm]
write_to = "src/qmflows/_version.py"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "scm.plams.*",
    "scm.*",
    "noodles.*",
    "rdkit.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.flake8]
max-line-length = 100
exclude = [
    "src/qmflows/_version.py ALL",
]

[tool.pytest.ini_options]
testpaths = "src test"
addopts = "--tb=short --cov --doctest-modules --cov-report xml --cov-report term --cov-report html -s --pdbcls=IPython.terminal.debugger:TerminalPdb"
markers = [
    "slow: A marker for slow tests requiring external quantum-chemical packages.",
]
filterwarnings = [
    "error::qmflows.warnings_qmflows.QMFlows_Warning",
    "ignore:Generic keyword '_pytestfixturefunction' not implemented for package \\w:qmflows.warnings_qmflows.Key_Warning",
]

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D401", "D105"]
ignore-decorators = "overload"
