[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = src

[pycodestyle]
max-line-length = 100

[tool:pytest]
testpaths = qmflows test
addopts = --pycodestyle --pydocstyle --tb=short --cov --cov-report xml --cov-report term --cov-report html
markers = slow: A marker for slow tests requiring external quantum-chemical packages.

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pydocstyle]
convention = numpy
add-ignore = D401  # First line should be in imperative mood
ignore-decorators = overload
