[metadata]
description_file = README.rst
license_file = LICENSE.md

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = src

[pycodestyle]
ignore = E302,E301,W504  # E302 & E301 due pycodestyle's awful support for @overload
select = W503  # W503 looks better than W504
max-line-length = 100

[tool:pytest]
testpaths = src test
addopts = --pycodestyle --pydocstyle --tb=short --cov --doctest-modules --cov-report xml --cov-report term --cov-report html
markers = slow: A marker for slow tests requiring external quantum-chemical packages.
filterwarnings =
    ignore:Generic keyword '_pytestfixturefunction' not implemented:qmflows.warnings_qmflows.Key_Warning

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pydocstyle]
convention = numpy
add-ignore = D401  # First line should be in imperative mood
ignore-decorators = overload
